css changes to dashboard were spilling into home page *fixed*

--- a/frontend/src/components/dashboard/Dashboard.css
+++ b/frontend/src/components/dashboard/Dashboard.css
@@ -26,7 +26,7 @@
     border-radius: 25px;
     padding: 10px;
 }
-.bottom {
+.bottomdb {
     height: auto;
     background-color: #D3FFE2;
     border: 1px solid black;
